feat: Add "Show State" menu